"ChangeLog"

2005-09-14	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-14:
	  Introduced dump_flags structure for customizing hierarchical dumps, 
		will be extremely useful for cflat formatting.  
	  Extended instance alias dump to take a dump_flags argument.
		Re-using dump_hiearchical_name to print the flattened
		canonical_names after unique allocation.  
	  This branch is mature, and ready to merge to trunk.  


	* ARTXX-00-01-04-main-00-58-unique-02-13:
	  No code revision, just more test cases...
	  We interrupt test-case writing to add more information to 
		the global state dump: canonical name field.  
	  TODO: update hackt-alloc-expect.sh test script.  


	* ARTXX-00-01-04-main-00-58-unique-02-12:
	  BUG FIXED: forgot to remove footprint pointer from unroll_context
		in the tail-recursive path of member instance reference
		resolution during unroll phase.  (one-line fix)
	  Added test-cases process/107,109.


2005-09-13	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-11:
	  No code revision, just added a handful of tests to parser/process/.
	  ... and stopped because critical BUG was discovered in cases:
		process/107,109(reduced)
		Must fix this before proceeding.  


	* ARTXX-00-01-04-main-00-58-unique-02-10:
	  Breaking news!
	  Recursive hierarchical subinstance allocation seems to be working
		for the existing test-cases, but more test cases are needed.  
		TODO: test cases with deep recursion of private subinstances.  
	  Re-ordered global_entry reconstruction ordering because footprint 
		restoration depends on parent_id and local_offset fields.


2005-09-12	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-09:
	  Merely clean-up of previous revision.  


	* ARTXX-00-01-04-main-00-58-unique-02-08:
	  Fused footprint_frame allocation and assignment together 
		into one method call.  (TODO: clean up conditional)