@@ -6,5 +6,8 @@ that I cannot bear to part with permanently.
 They shall remain here as historic landmarks, 
 and serve no other purpose.  
 
+NOTE: 2005-09-14
+These files have been removed from distribution, but remain in CVS.  
+
 Fang		<fangism@users.sourceforge.net>
 
